--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "name": "game-api",
+  "version": "1.0.0",
+  "description": "Atividade API simples BAck-End",
+  "main": "server.js",
+  "scripts": {
+  "start": "node server.js",
+  "dev": "nodemon server.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": ["node", "express", "mvc", "SENAI", "back-end"],
+  "author": "Vinicius Valverde",
+  "license": "MIT",
+  "type": "module",
   "dependencies": {
-    "express": "^4.21.2"
+  "express": "^4.21.2"
+  },
+  "devDependencies": {
+  "nodemon": "^3.1.7"
   }
-}
+  }
